[gd_scene load_steps=4 format=3 uid="uid://cyxiagm617ma7"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jl5rw"]
[ext_resource type="Texture2D" uid="uid://dy1qwjx8s4mgs" path="res://sprites/circle.png" id="2_3rnn8"]
[ext_resource type="Texture2D" uid="uid://ctljf3u6f8kml" path="res://sprites/vov√¥.png" id="3_vxbu6"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jl5rw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1088.0
offset_bottom = 64.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 512.0
offset_right = 576.0
offset_bottom = 64.0
max_value = 60.0
value = 45.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("2_3rnn8")

[node name="LabelTimer" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 448.0
offset_right = 640.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 32
text = "TIMER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 896.0
offset_right = 1088.0
offset_bottom = 64.0
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLives" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 192.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 32
text = "LIVES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Panel/LabelLives"]
position = Vector2(32, 32)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_vxbu6")

[node name="Pause" type="Panel" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 192.0
offset_right = 768.0
offset_bottom = 448.0

[node name="LabelTimer" type="Label" parent="Pause"]
texture_filter = 1
layout_mode = 0
offset_left = 120.0
offset_right = 312.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 32
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 192.0

[node name="Resume" type="Button" parent="Pause/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="MainMenu" type="Button" parent="Pause/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[connection signal="pressed" from="Pause/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
